--- a/index.html
+++ b/index.html
@@ -10,29 +10,21 @@
       margin: 0;
       padding: 0;
       width: 100%;
-      height: 100%;
       font-family: 'Roboto', sans-serif;
       background: #000;
       color: #fff;
-      overflow: hidden;
     }
 
     .rss-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      height: 100%;
       padding: 1rem;
       box-sizing: border-box;
+      max-width: 100%;
     }
 
     .rss-grid {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       gap: 1.5rem;
-      height: 100%;
-      overflow-y: auto;
-      padding-right: 0.5rem;
     }
 
     .rss-item {
@@ -47,17 +39,15 @@
     }
 
     .rss-item h3 {
-      font-size: 1.35rem;
+      font-size: 1.25rem;
       margin: 0.75rem 0 0.35rem 0;
       color: #fff;
-      padding: 0;
     }
 
     .rss-item p {
       font-family: Courier, monospace;
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       margin: 0.15rem 0;
-      padding: 0;
     }
 
     a {
@@ -65,17 +55,7 @@
       color: inherit;
     }
 
-    @media (max-width: 1024px) {
-      .rss-grid {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
-
-    @media (max-width: 600px) {
-      .rss-grid {
-        grid-template-columns: 1fr;
-      }
-
+    @media (max-width: 768px) {
       .rss-item h3 {
         font-size: 1.1rem;
       }
